testdata/envoy-config/bootstrap.yaml
admin:
  access_log_path: ./access_logs
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19000
dynamic_resources:
  cds_config:
    path: ./clusters.yaml
  lds_config:
    path: ./listeners.yaml
node:
  cluster: ct-proxy
  id: 172.17.0.3~example-app-64c5d9464f-k9ml5~demo
  metadata:
    containerPorts: "8080"
    probePorts: "8080"
    provider: ct
  user_agent_name: envoy
static_resources:
  clusters:
  - connect_timeout: 10s
    lb_policy: CLUSTER_PROVIDED
    name: OUTbound
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    type: ORIGINAL_DST
  - connect_timeout: 10s
    name: BlackHoleCluster
    type: STATIC
  - common_http_protocol_options:
      idle_timeout: 30s
    connect_timeout: 1s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: heimdallr.colortokens.svc
                port_value: 8090
    name: xds_cluster
    type: STRICT_DNS
    upstream_connection_options:
      tcp_keepalive:
        keepalive_interval: 10
        keepalive_probes: 1
        keepalive_time: 10
  - connect_timeout: 1s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_als_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: heimdallr.colortokens.svc
                port_value: 8095
    name: grpc_als_cluster
    type: STRICT_DNS
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 1483
    filter_chains:
    - filter_chain_match:
        destination_port: 1483
      filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: ./tcp_out_blackhole
          cluster: BlackHoleCluster
          stat_prefix: BlackHoleCluster
      name: tcp_out_filter-blackhole
    - filter_chain_match:
        application_protocols:
        - http/1.0
        - http/1.1
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.http_grpc
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                grpc_service:
                  envoy_grpc:
                    cluster_name: grpc_als_cluster
                log_name: http_outbound
                transport_api_version: V3
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: outbound_route
            virtual_hosts:
            - domains:
              - '*'
              name: outbound_service
              routes:
              - match:
                  prefix: /
                route:
                  cluster: OUTbound
          stat_prefix: egress_http
      name: http_out_filterChain
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          access_log:
          - name: envoy.access_loggers.tcp_grpc
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
              common_config:
                grpc_service:
                  envoy_grpc:
                    cluster_name: grpc_als_cluster
                log_name: tcp_outbound
                transport_api_version: V3
          cluster: OUTbound
          stat_prefix: OUTbound
      name: tcp_out_filter
    listener_filters:
    - name: envoy.filters.listener.http_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: tcp_out_listener
    traffic_direction: OUTBOUND
    use_original_dst: true
